refactor :  코드 스타일 리팩토링